[package]
name = "dub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
trace = "0.1.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twitch-irc = "5.0.1"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }